Fixed container and spacing for template migration

--- a/less/plugins/ecommerce/basket.less
+++ b/less/plugins/ecommerce/basket.less
@@ -22,7 +22,7 @@
     margin: 0;
     box-shadow:  inset 0px 0px 0px 2px fade(@color-swatch2, 0%);
     color: @font-swatch5-color;
-    text-indent: 100px;
+    text-indent: 9999px;
 
     @media @bp-global-small {
         border-right: 1px solid fade(@color-swatch5, 10%);
