--- a/less/widgets.less
+++ b/less/widgets.less
@@ -53,14 +53,6 @@
     clear: both;
 }
 
-// Standard Widgets
-
-.zone-content .widget {
-
-}
-
-
-
 
 
 
